[gd_scene load_steps=7 format=3 uid="uid://co57vhdvgh4n7"]

[ext_resource type="Script" path="res://CanvasLayer.gd" id="1_m0fud"]

[sub_resource type="Gradient" id="Gradient_2jo7i"]
offsets = PackedFloat32Array(0, 0.490323, 1)
colors = PackedColorArray(0, 0, 0, 1, 1.51612e-06, 0.488247, 0.225944, 1, 0.208414, 0.730262, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_y007l"]
gradient = SubResource("Gradient_2jo7i")
width = 1280
height = 920
fill_from = Vector2(0.334862, 1)
fill_to = Vector2(1, 0.00917431)

[sub_resource type="FontFile" id="FontFile_o14t3"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/70/0 = Vector2(0, 0)
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/20/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/70/0 = Vector2(0, 0)
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/50/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/70/0 = Vector2(0, 0)
cache/0/75/0/ascent = 0.0
cache/0/75/0/descent = 0.0
cache/0/75/0/underline_position = 0.0
cache/0/75/0/underline_thickness = 0.0
cache/0/75/0/scale = 1.0
cache/0/75/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/75/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/75/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/75/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/75/0/kerning_overrides/70/0 = Vector2(0, 0)
cache/0/70/0/ascent = 0.0
cache/0/70/0/descent = 0.0
cache/0/70/0/underline_position = 0.0
cache/0/70/0/underline_thickness = 0.0
cache/0/70/0/scale = 1.0
cache/0/70/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/70/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/70/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/70/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/70/0/kerning_overrides/70/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_4nsx8"]
font = SubResource("FontFile_o14t3")
font_size = 75
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_color = Color(0.176471, 0.176471, 0.176471, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="LabelSettings" id="LabelSettings_h4tkg"]
font_size = 24
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_color = Color(0.2, 0.2, 0.2, 1)
shadow_offset = Vector2(2, 2)

[node name="MainMenu" type="Node"]

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_y007l")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_m0fud")
nextScene = "res://Scenes/Main.tscn"

[node name="MainMenu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MainMenu/CenterContainer"]
custom_minimum_size = Vector2(512, 300)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/CenterContainer/PanelContainer/MarginContainer"]
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 16

[node name="GameTitle" type="Label" parent="CanvasLayer/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Plumber Adventure"
label_settings = SubResource("LabelSettings_4nsx8")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ButtonStart" type="Button" parent="CanvasLayer/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Start Game"

[node name="ButtonControls" type="Button" parent="CanvasLayer/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Controls"

[node name="ButtonQuit" type="Button" parent="CanvasLayer/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="ControlsMenu" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/ControlsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/ControlsMenu/CenterContainer"]
custom_minimum_size = Vector2(512, 300)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ControlsMenu/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ControlsMenu/CenterContainer/PanelContainer/MarginContainer"]
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 16

[node name="GameTitle" type="Label" parent="CanvasLayer/ControlsMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Controls"
label_settings = SubResource("LabelSettings_4nsx8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameTitle2" type="Label" parent="CanvasLayer/ControlsMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Movement : WASD / Arrow keys
Interact & Attack : E / Spacebar

Level up by defeating
enemies along the way
to gain more damage and HP

Make it to the end
and defeat the boss!"
label_settings = SubResource("LabelSettings_h4tkg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonQuit" type="Button" parent="CanvasLayer/ControlsMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Quit"

[connection signal="pressed" from="CanvasLayer/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonStart" to="CanvasLayer" method="_on_button_start_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonControls" to="CanvasLayer" method="_on_button_controls_pressed"]
[connection signal="button_up" from="CanvasLayer/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonQuit" to="CanvasLayer" method="_on_button_quit_button_up"]
[connection signal="pressed" from="CanvasLayer/ControlsMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonQuit" to="CanvasLayer" method="_on_button_quit_pressed"]
